--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -32,30 +32,34 @@ import Layout from "../layouts/Layout.astro";
         <p>We have four working groups and a steering group comprised of working group leads.</p>
 
         <table class="table--bordered">
-          <tr>
-            <th>Working Group</th>
-            <th>Lead</th>
-          </tr>
-          <tr>
-            <td>Member Outreach</td>
-            <td><a href="https://vladh.net">Vlad-Stefan Harbuz</a></td>
-          </tr>
-          <tr>
-            <td>Maintainer Outreach</td>
-            <td><a href="https://ethanarrowood.com/">Ethan Arrowood</a></td>
-          </tr>
-          <tr>
-            <td>Marketing &amp; Media</td>
-            <td><a href="https://github.com/selviano">Michael Selvidge</a></td>
-          </tr>
-          <tr>
-            <td>Design &amp; Build</td>
-            <td><a href="https://chadwhitacre.com/">Chad Whitacre</a></td>
-          </tr>
-          <tr>
-            <td>Steering</td>
-            <td><a href="https://chadwhitacre.com/">Chad Whitacre</a></td>
-          </tr>
+          <thead>
+            <tr>
+              <th>Working Group</th>
+              <th>Lead</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Member Outreach</td>
+              <td><a href="https://vladh.net">Vlad-Stefan Harbuz</a></td>
+            </tr>
+            <tr>
+              <td>Maintainer Outreach</td>
+              <td><a href="https://ethanarrowood.com/">Ethan Arrowood</a></td>
+            </tr>
+            <tr>
+              <td>Marketing &amp; Media</td>
+              <td><a href="https://github.com/selviano">Michael Selvidge</a></td>
+            </tr>
+            <tr>
+              <td>Design &amp; Build</td>
+              <td><a href="https://chadwhitacre.com/">Chad Whitacre</a></td>
+            </tr>
+            <tr>
+              <td>Steering</td>
+              <td><a href="https://chadwhitacre.com/">Chad Whitacre</a></td>
+            </tr>
+          </tbody>
         </table>
       </section>
 
